--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "version": "1.0.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001643",
@@ -19,6 +22,7 @@
     "sweetalert2-react-content": "^5.0.7"
   },
   "scripts": {
+    "dev": "vite --port 5173 --open",
     "start": "vite --port 5173 --open",
     "build": "vite build",
     "test": "jest --watch --config=jest.config.js",
@@ -93,7 +97,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "cypress": "^10.3.0",
     "eslint": "^8.36.0",
-    "eslint-config-asymetrics": "^2.1.3",
     "eslint-config-react-app": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
