--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001643",
     "chart.js": "^4.4.3",
@@ -17,6 +17,7 @@
     "react-bootstrap-pagination-control": "^1.0.5",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.25.1",
     "sweetalert2": "^11.12.3",
     "sweetalert2-react-content": "^5.0.7"
