--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.25.1",
+    "react-select": "^5.8.0",
     "sweetalert2": "^11.12.3",
     "sweetalert2-react-content": "^5.0.7"
   },
