--- a/app.yaml
+++ b/app.yaml
@@ -1,19 +1,21 @@
 runtime: nodejs20
 
-# Utilizar la versión LTS de Node.js
-#runtime_version: 14
-
 handlers:
   # Ruta para servir el archivo index.html
   - url: /
     static_files: dist/index.html
     upload: dist/index.html
 
-  # Ruta para servir los archivos estáticos generados por Vite
+  # Ruta para servir archivos estáticos generados por Vite
   - url: /assets
     static_dir: dist/assets
 
-  # Ruta para servir el resto de archivos estáticos (por ejemplo, favicon.ico)
-  - url: /(.+)
+  # Ruta para servir otros archivos estáticos (evitar que sean tratados como redirección a index.html)
+  - url: /(.+\..+)
     static_files: dist/\1
-    upload: dist/(.*)
+    upload: dist/(.+)
+
+  # Redirigir todas las demás rutas (por ejemplo, las rutas gestionadas por React Router) a index.html
+  - url: /.*
+    static_files: dist/index.html
+    upload: dist/index.html
