--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001643",
@@ -18,10 +19,12 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.0",
     "sweetalert2": "^11.12.3",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "dev": "vite --port 5173 --open",
