--- a/package.json
+++ b/package.json
@@ -96,12 +96,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.2.10",
+    "@types/cypress": "^0.1.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.30",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "cypress": "^10.3.0",
+    "cypress": "^10.11.0",
     "eslint": "^8.36.0",
     "eslint-config-react-app": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
@@ -113,7 +114,7 @@
     "stylelint-config-rational-order": "^0.0.4",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.6.3",
     "vite": "^4.2.1"
   }
 }
