--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001643",
     "chart.js": "^4.4.3",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-bootstrap-pagination-control": "^1.0.5",
     "react-chartjs-2": "^5.2.0",
